--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="reset_pass">重置密码</string>
     <string name="server_setting">服务器地址配置</string>
     <string name="mobile_copyright">Copyright © 中国移动通信有限公司</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
