--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="tab_home">Home</string>
-    <string name="tab_asset">Asset</string>
-    <string name="tab_mine">Mine</string>
+    <string name="tab_home">业务管理</string>
+    <string name="tab_asset">个人资产管理</string>
+    <string name="tab_mine">个人中心</string>
 </resources>
